Upload Aula 02 + Challenges.

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@
 *.sql
 
 # Arquivos dos desafios
-*_Solution.ipynb
+Aula02_Challenge_Solution.ipynb
+
+# Próximas aulas
+Aula03_TecnicasAvancadas.ipynb
