Upload Aula 03 + Challenges.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.sql
 
 # Arquivos dos desafios
-Aula02_Challenge_Solution.ipynb
+Aula03_Challenge_Solution.ipynb
 
 # Próximas aulas
-Aula03_TecnicasAvancadas.ipynb
+Aula04_MelhoresPraticas.ipynb
